Fix iframe alignment
YouTube videos are inserted as iframes, and should be center-aligned.
To do this with auto margins the element also needs to be set as a
block-level element.

--- a/src/scss/global/_structure.scss
+++ b/src/scss/global/_structure.scss
@@ -14,6 +14,9 @@ body {
         height: 370px !important;
         max-width: 100%;
         max-height: 56.25vw !important;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
 
 }
@@ -36,3 +39,4 @@ body {
     }
 
 }
+
